--- a/HeartDiseasePrediction.Rmd
+++ b/HeartDiseasePrediction.Rmd
@@ -94,7 +94,7 @@ framingham[c(categorical_columns, label_column)] %>%
   pivot_longer(everything()) %>%
   group_by(across(everything())) %>%
   summarise(N=n(), percentage=(n()/nrow(framingham))*100) %>%
-  ggplot(aes(x=value, y=percentage, fill=value)) +
+  ggplot(aes(x=as.factor(value), y=percentage, fill=value)) +
   geom_bar(stat="identity") +
   facet_wrap(~ name, ncol=3, scales="free") +
   labs(title="Distribution of Categorical Variables",x="Category", y = "Percentage(%)")+
@@ -115,11 +115,6 @@ framingham[c(numerical_columns, label_column)] %>%
 ```
 
 #### Categorical columns
-
-```{r}
-framingham %>%
-  summarise(across(everything(), list(count = n())))
-```
 
 ```{r fig.height=8, fig.width=11}
 categorical_without_education = c('male', 'currentSmoker', 'BPMeds', 'prevalentStroke', 'prevalentHyp', 'diabetes')
@@ -165,34 +160,6 @@ nrow(filtered_framingham)
 
 ### Model fitting
 
-```{r}
-filtered_framingham_fit <- rpart(TenYearCHD ~ ., data = filtered_framingham)
-
-var_importance <- 
-  tibble(variable = names(filtered_framingham_fit$variable.importance), importance = filtered_framingham_fit$variable.importance)
-```
-
-```{r fit-var-importance, echo=TRUE}
-var_importance %>% 
-  mutate(variable = fct_reorder(variable, importance)) %>% 
-  ggplot(aes(x = importance, y = variable)) +
-  geom_segment(aes(x = 0, y = variable, xend = importance, yend = variable)) +
-  geom_point(colour = "red")
-```
-
-```{r}
-filtered_framingham_fit_gini <- rpart(TenYearCHD ~ ., data = filtered_framingham, parms = list(split = "gini"))
-
-printcp(filtered_framingham_fit_gini)
-rpart.plot(filtered_framingham_fit_gini)
-```
-
-```{r}
-
-pred_gini <- predict(filtered_framingham_fit_gini, filtered_framingham, type = "class")
-table(filtered_framingham$TenYearCHD, pred_gini)
-```
-
 ```{r echo=FALSE}
 # install.packages("caTools")       # For sampling the dataset 
 # install.packages("randomForest")
@@ -235,4 +202,9 @@ classifier_RF
 ```{r}
 confusion_mtx = table(test[,1], y_pred) 
 confusion_mtx 
+```
+
+```{r}
+accuracy = (confusion_mtx[1] + confusion_mtx[4])*100 /sum(confusion_mtx)
+accuracy
 ```
